Changes to db Names

--- a/DissertationOrganisation/appsettings.json
+++ b/DissertationOrganisation/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-7UDB2B7\\MSSQLSERVER01;Database=DissertationApplication;Trusted_Connection=True;"
+    "DefaultConnection": "Server=kistee;Database=DissertationApplication;User Id=SA; Password=D1553rtat10n;"
   }
 }
